deps/src/cmake-3.13.4/Tests/RunCMake/CommandLine/cache-bad-entry-stderr.txt
^CMake Error: Parse error in cache file .*/Tests/RunCMake/CommandLine/cache-bad-entry/CMakeCache.txt on line 7. Offending entry: BAD ENTRY.*
